[package]
name = "harvester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
chrono = "0.4.26"
curl = "0.4.44"
hostname = "0.3.1"
r2d2 = "0.8.10"
serde = { version = "1.0.182", features = ["serde_derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
ssh2 = "0.9.4"
thiserror = "^1.0.44"
